Use toList instead of collect(Collectors.toList()) when the list is definitely never modified